--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -55,7 +55,7 @@ a {
 
 .page-header {
   color: #000;
-  text-align: center;
+  text-align: center; }
 /*  background-color: #159957;
     background-image: linear-gradient(120deg, #155799, #159957); } */
 
